Fixed index nav z-index, fixed upcoming titles a links

--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,9 @@ body{
 .page{
 	padding-bottom:		50px;
 }
-
+nav ul li{
+	z-index:1;
+}
 #main_article{
 	margin-bottom:		20px;
 	position:			relative;
@@ -82,6 +84,9 @@ body{
 	background-color:	#8e8e8e;
 	margin-left: 		20px;
 }
+#upcoming_titles p{
+	margin:				0;
+}
 #upcoming_titles h2{
 	text-align:			center;
 	background-color: 	#0066dd;
@@ -93,22 +98,23 @@ body{
 	padding:			0;
 }
 #upcoming_titles ol li{
-	display:			inline-block;
+	list-style:			none;
 	border: 			solid;
 	width:				200px;
 	height:				70px;
 	text-align:			center;
-	padding-top:		10px;
 	font-size:			1.2em;
 	font-weight: 		bold;
 }
 #upcoming_titles ol li a{
+	display:			inline-block;
 	text-decoration:	none;
 	color:				white;
-	text-shadow: 		-1px -1px 0 blue,
-						1px -1px 0 blue, 
-						-1px 1px 0 blue,
-						1px 1px 0 blue;
+	text-shadow: 		-1px -1px 0 black,
+						1px -1px 0 black, 
+						-1px 1px 0 black,
+						1px 1px 0 black;
+	padding:			20px;
 }
 #upcoming_titles ol li a:hover{
 	color:				yellow;
